<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_school_logo"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/logo" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ttl_nis_nip"
                style="@style/Widget.AppTheme.TextInputLayout.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/username_hint"
                app:startIconDrawable="@drawable/baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_nis_nip"
                    style="@style/text_body_regular_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ttl_password"
                style="@style/Widget.AppTheme.TextInputLayout.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/password_hint"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/edt_password"
                    style="@style/text_body_regular_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ttl_level"
                style="@style/Widget.AppTheme.TextInputLayout.OutlineBox.DropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="20dp"
                android:hint="@string/text_role_hint"
                app:startIconDrawable="@drawable/baseline_group_24">


                <AutoCompleteTextView
                    android:id="@+id/ac_level"
                    style="@style/text_body_regular_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_level"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:spinnerMode="dialog" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/text_semi_bold_mobile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/text_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="end"
                android:text="@string/text_forgot_password" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.mingle.widget.LoadingView
        android:id="@+id/load_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible">

    </com.mingle.widget.LoadingView>


</FrameLayout>